--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1957,7 +1957,7 @@ input, select, textarea {
 		input[type="button"].primary,
 		button.primary,
 		.button.primary {
-			background-color: #8cc9f0;
+			background-color: #ccaaee;
 			color: #ffffff !important;
 			box-shadow: none;
 		}
