--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2369,6 +2369,7 @@ input, select, textarea {
 		border: 0;
 		display: inline-block;
 		position: relative;
+		align-items: center;
 	}
 
 		.image img {
