--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2519,7 +2519,7 @@ input, select, textarea {
 			-moz-justify-content: center;
 			-webkit-justify-content: center;
 			-ms-justify-content: center;
-			justify-content: center;
+			justify-content: left;
 			width: 100%;
 			margin-left: 0;
 		}
