--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2639,7 +2639,8 @@ input, select, textarea {
 /* Section/Article */
 
 	section.special, article.special {
-		text-align: left;
+		text-align: center;
+		align-items: center;
 	}
 
 	header.major {
