--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2366,6 +2366,7 @@ input, select, textarea {
 	.aligned-content {
 	    display: block;
 	    align-items: center; /* Center vertically */
+	    justify-content: left;
 	}
 
 	.image {
